WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185465
Tapping after CSS-based table casues an infinite loop in wordRangeFromPosition
https://bugs.webkit.org/show_bug.cgi?id=185465
Summary
Tapping after CSS-based table casues an infinite loop in wordRangeFromPosition
Ryosuke Niwa
Reported
2018-05-08 23:38:01 PDT
Tapping on a space after a CSS-based table causes a hang inside wordRangeFromPosition.
Attachments
Reduction
(943 bytes, text/html)
2018-05-08 23:39 PDT
,
Ryosuke Niwa
no flags
Details
WIP1
(20.79 KB, patch)
2018-05-08 23:40 PDT
,
Ryosuke Niwa
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-sierra
(2.24 MB, application/zip)
2018-05-09 00:45 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews104 for mac-sierra-wk2
(2.69 MB, application/zip)
2018-05-09 00:50 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews116 for mac-sierra
(3.04 MB, application/zip)
2018-05-09 01:15 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews123 for ios-simulator-wk2
(2.18 MB, application/zip)
2018-05-09 01:22 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews204 for win-future
(12.76 MB, application/zip)
2018-05-09 03:32 PDT
,
EWS Watchlist
no flags
Details
WIP2
(21.60 KB, patch)
2018-05-09 11:09 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixes the hang
(43.41 KB, patch)
2018-05-10 14:59 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2018-05-08 23:39:09 PDT
Created
attachment 339933
[details]
Reduction
Ryosuke Niwa
Comment 2
2018-05-08 23:40:54 PDT
Created
attachment 339934
[details]
WIP1
Ryosuke Niwa
Comment 3
2018-05-08 23:41:11 PDT
<
rdar://problem/35263057
>
EWS Watchlist
Comment 4
2018-05-09 00:45:11 PDT
Comment on
attachment 339934
[details]
WIP1
Attachment 339934
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/7620890
New failing tests: fast/html/marquee-reparent-check.html fast/spatial-navigation/snav-radio-group.html
EWS Watchlist
Comment 5
2018-05-09 00:45:12 PDT
Created
attachment 339939
[details]
Archive of layout-test-results from ews100 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6
2018-05-09 00:50:16 PDT
Comment on
attachment 339934
[details]
WIP1
Attachment 339934
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/7620897
New failing tests: fast/html/marquee-reparent-check.html
EWS Watchlist
Comment 7
2018-05-09 00:50:18 PDT
Created
attachment 339941
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8
2018-05-09 01:15:17 PDT
Comment on
attachment 339934
[details]
WIP1
Attachment 339934
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/7620915
New failing tests: fast/spatial-navigation/snav-radio-group.html
EWS Watchlist
Comment 9
2018-05-09 01:15:19 PDT
Created
attachment 339942
[details]
Archive of layout-test-results from ews116 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 10
2018-05-09 01:22:35 PDT
Comment on
attachment 339934
[details]
WIP1
Attachment 339934
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/7620930
New failing tests: fast/html/marquee-reparent-check.html
EWS Watchlist
Comment 11
2018-05-09 01:22:37 PDT
Created
attachment 339944
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
EWS Watchlist
Comment 12
2018-05-09 03:32:16 PDT
Comment on
attachment 339934
[details]
WIP1
Attachment 339934
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7621732
New failing tests: fast/html/marquee-reparent-check.html fast/spatial-navigation/snav-radio-group.html
EWS Watchlist
Comment 13
2018-05-09 03:32:27 PDT
Created
attachment 339951
[details]
Archive of layout-test-results from ews204 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews204 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Ryosuke Niwa
Comment 14
2018-05-09 11:09:29 PDT
Created
attachment 339985
[details]
WIP2
Ryosuke Niwa
Comment 15
2018-05-10 14:59:25 PDT
Created
attachment 340135
[details]
Fixes the hang
Ryosuke Niwa
Comment 16
2018-05-11 13:12:29 PDT
Comment on
attachment 340135
[details]
Fixes the hang Thanks for the review!
WebKit Commit Bot
Comment 17
2018-05-11 13:39:36 PDT
Comment on
attachment 340135
[details]
Fixes the hang Clearing flags on attachment: 340135 Committed
r231717
: <
https://trac.webkit.org/changeset/231717
>
WebKit Commit Bot
Comment 18
2018-05-11 13:39:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug